code.  The committed files are generated from flex 2.5.4 and bison 1,28.
(grb)
6.  Added Compiler/compilerDeclContext.{cpp,h} and makefile changes.
This change paves the way for upcoming changes that will allow the compiler
to work indepently of the repository. (grb)
7. Extend testclient (clients/testclient) tests and functions. ks 19 June 2001
8. CV added const to CIMOperations modifyInstance, createInstance, modifyClass,
createClass to protect caller's object.
9. CV added CIMQueryProvider and CIMAssociationProvider to the Provider2 directory. These
interfaces allow very smart providers to perform advances operations. CIMProviderStub has
been updated to support the new interfaces. Needs testing.
10. Added rpm packaging support and shell script based build process. MM
---------------------------------------------------------------
Version 0.97.3 - Released 5 June 2001

1. (KS)OptionManager (CPP and H), Logger (CPP and H), Handler (CPP and H),
CIMServer (both)
Functions added include:
	a. Enable trace to log file.
	b. Add option so that you can trace to console or trace to logfile (-l
	is
	   trace to log, -t is trace to console).
	c. add parameter in optionsrow for help message and enable the capture
	   of these messages in Options class.  Also added help print that
	   prints these things out.  However, format not to beautiful.
	d. Eliminate a couple of messages coming from __Namespace provider.
	e. Extend the Clients\testclient so he does tests on Namespace.
2. (KS)Extended Log to show time, severity.
3. (KS)Added getCurrentASCIITime functions to System.x
4. (KS)Extended options on CIMServer including 1. option to determine where
logs
are put
5. (KS)Added TestClient that executes a series of tests against a server.
This is a preliminary version.
6. (KS)Corrected problem with acceptor.bind where failure was being lost. Now
throws CannotBind exception.
7. (KS)Added logger entry to XMLParser for errors.  NOTE: At this point it may
not