@@ -1,3 +1,10 @@
+# Makefile builds the Pegasus Repository
+# ATTN: Today this makefile is implementation dependent.
+#       It assumes that the repository is a set of directories
+#       that can be removed by removing the directories.
+#       This must be updated to an implementation independent repository
+#       remove function.
+
 ROOT = ../../../..
 include $(ROOT)/mak/config.mak
 
@@ -5,6 +12,8 @@ MOF_PATH = $(ROOT)/Schemas/CIM25
 
 
 all:
+
+# Delete and rebuild the repository using the MOF compiler.
 
 repository:
 	@ echo +++++ Populating CIM repository - this will take a minute
